--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 <div class="container">
 	<div class="jumbotron">
 
-<form action="/cgi-bin/docker_with_ansible.py"  name="f1" onsubmit="return blank()">
 <h1><center>Docker With Ansible</center></h1>
 </div>
 
@@ -37,25 +36,30 @@
 
 		<tr>
 			<td><button class="button button4">install docker</button></td>
-                        <td><button class="button button4">launch docker container</button></td>
-			<td><button class="button button4">start docker container</button></td>
+                        <td><button class="button button4" onclick="location.href='launch_cont.html'">launch docker container</button></td>
+			<td><button class="button button4" onclick="location.href='start_cont.html'"`>start docker container</button></td>
 
 		</tr>
 	 
 		<tr>
-			<td><button class="button button4">stop docker container</button></td>
-			<td><button class="button button4">remove docker container</button></td>
-			<td><button class="button button4">list containers</button></td>
+			<td><button class="button button4" onclick="location.href='stop_cont.html'">stop docker container</button></td>
+			<td><button class="button button4" onclick="location.href='rm_cont.html'">remove docker container</button></td>
+			<td><button class="button button4" onclick="location.href='list_cont.html'">list containers</button></td>
 		</tr>
 
 		<tr>
-			<td><button class="button button4">create multiple containers with volume</button></td>
-			<td><button class="button button4">create container with volume</button></td>
+			<td><button class="button button4" onclick="location.href='multiple_cont.html'">create multiple containers with volume</button></td>
+			<td><button class="button button4" onclick="location.href='volume_cont.html'">create container with volume</button></td>
 		</tr>
 
 	</table>
 </center>
 </div>
+
+ <form action="/cgi-bin/docker_with_ansible.py">
+  First name: <input type="text" name="fname"><br>
+  Last name: <input type="text" name="lname"><br>
+  <input type="submit" value="Submit">
 
 </body>
 </html>
